[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spake2plus"
authors = [
    {name = "José Ignacio Escribano"},
]
description = "A simple implementation of SPAKE2+ protocol"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cryptography", "spake2plus"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Security :: Cryptography"
]
dynamic = ["version", "dependencies", "optional-dependencies"]
[tool.setuptools.dynamic]
version = {attr = "spake2plus.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }, build = { file = ["requirements-build.txt"] }}
[project.scripts]
spake2plus = "spake2plus.cli.cli:main"